changed background and back to front page

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 <style>.anim{visibility:hidden}</style>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli%7CMontserrat:300,400&amp;subset=all">
 <title>TRTN</title>
-<link rel="stylesheet" type="text/css" href="css/site.20170929122529.css">
+<link rel="stylesheet" type="text/css" href="css/site.20171005122249.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20170929122529-lteIE7.css">
+<link rel="stylesheet" type="text/css" href="css/site.20171005122249-lteIE7.css">
 <![endif]-->
 </head>
 <body id="body">
-<div class="fbk vis pos size cont fixed" data-fbk="fixed">
+<div class="vis pos size cont">
 <div class="pos-2 vis-2 section">
 <div class="vis pos-3 size-2 cont-2">
 <div class="vis pos-4 size-3 cont-3">
@@ -39,69 +39,77 @@
 <p class="para-2"><span class="font-2"><a href="#">TRTN</a></span></p>
 </div>
 </div>
-<div class="vis pos-6 size-5 cont-2">
-<div class="vis pos-7 size-6 colwrapper">
-<div class="vis pos-7 size-7 cont-5">
-<div class="vis pos-8 size-8 cont-2">
-<div class="vis pos-7 size-9 cont-6">
+</div>
+<a name="anchor1" class="vis pos-6 size-5">
+</a>
+</div>
+<div class="pos-7 vis-2 section-2">
+<div class="vis pos-8 size-6 cont-2">
+<div class="vis pos-9 size-7 colwrapper">
+<div class="vis pos-9 size-8 cont-5">
+<div class="vis pos-10 size-9 cont-2">
+<div class="vis pos-9 size-10 cont-6">
 <p class="para-3"><span class="font-3">Autumn 2017</span></p>
 </div>
-<div class="vis pos-9 size-10 cont-7">
-<img src="images/leaf.svg" alt="" class="img js-9">
+<div class="vis pos-11 size-11 cont-7">
+<picture class="img-2 js-10">
+<source data-srcset="images/leaf-79.png 1x">
+<img data-src="images/leaf-79.png" alt="" class="js img">
+</picture>
 </div>
 </div>
 </div>
-<div class="vis pos-10 size-11 cont-2">
-<div class="vis pos-7 size-11 colwrapper">
-<div class="vis pos-7 size-12 cont-8">
-<div class="anim fadeIn js vis pos-11 size-13 cont-9">
+<div class="vis pos-12 size-12 cont-2">
+<div class="vis pos-9 size-12 colwrapper">
+<div class="vis pos-9 size-13 cont-8">
+<div class="anim fadeIn js-2 vis pos-13 size-14 cont-9">
 <p class="para-4"><span class="font-4">22 pictures</span><span class="font-5">&nbsp;</span></p>
 <p class="para-5"><span class="font-6">jz4zmz, fnck</span></p>
 </div>
 </div>
-<div class="vis pos-12 size-14 cont-10">
-<a class="button vis-3 pos-13 size-15 font-7" href="pictures.html"></a>
+<div class="vis pos-14 size-15 cont-10">
+<a class="button vis-3 pos-15 size-16 font-7" href="pictures.html"></a>
 </div>
 </div>
 </div>
-<div class="vis pos-14 size-16 cont-11">
-<div class="anim fadeIn js-2 vis pos-15 size-17 cont-12">
+<div class="vis pos-16 size-17 cont-11">
+<div class="anim fadeIn js-3 vis pos-17 size-18 cont-12">
 <p class="para-6"><span class="font-8">5 articles</span><span class="font-9">&nbsp;</span></p>
 <p class="para-7"><span class="font-10">rspct, louve</span></p>
 </div>
 </div>
-<div class="vis pos-16 size-18 cont-13">
-<a class="button vis-3 pos-13 size-19 font-11" href="pictures.html"></a>
+<div class="vis pos-18 size-19 cont-13">
+<a class="button vis-3 pos-15 size-20 font-11" href="pictures.html"></a>
 </div>
 </div>
-<div class="vis pos-17 size-20 colwrapper">
-<div class="vis pos-7 size-21 cont-2">
-<div class="vis pos-7 size-21 colwrapper">
-<div class="vis pos-7 size-21 cont-2">
-<div class="vis pos-7 size-21 colwrapper">
-<div class="vis pos-7 size-22 cont-14">
-<div class="anim fadeIn js-3 vis pos-18 size-23 cont-15">
+<div class="vis pos-19 size-21 colwrapper">
+<div class="vis pos-9 size-22 cont-2">
+<div class="vis pos-9 size-22 colwrapper">
+<div class="vis pos-9 size-22 cont-2">
+<div class="vis pos-9 size-22 colwrapper">
+<div class="vis pos-9 size-23 cont-14">
+<div class="anim fadeIn js-4 vis pos-20 size-24 cont-15">
 <p class="para-4"><span class="font-4">16 musics</span><span class="font-5">&nbsp;</span></p>
 <p class="para-8"><span class="font-6">ppp, berliani</span></p>
 </div>
 </div>
-<div class="vis pos-19 size-22 cont-16">
-<a class="button vis-3 pos-13 size-24 font-12" href="music.html"></a>
+<div class="vis pos-21 size-23 cont-16">
+<a class="button vis-3 pos-15 size-25 font-12" href="music.html"></a>
 </div>
 </div>
 </div>
-<div class="vis pos-19 size-25 cont-17">
-<a class="button vis-3 pos-13 size-26 font-12" href="music.html"></a>
+<div class="vis pos-21 size-26 cont-17">
+<a class="button vis-3 pos-15 size-27 font-12" href="music.html"></a>
 </div>
 </div>
 </div>
-<div class="vis pos-14 size-27 cont-18"></div>
-<div class="vis pos-20 size-28 cont-2">
-<div class="vis pos-7 size-28 colwrapper">
-<div class="vis pos-7 size-28 cont-19">
-<a class="button vis-3 pos-13 size-29 font-13" href="pictures.html"></a>
+<div class="vis pos-16 size-28 cont-18"></div>
+<div class="vis pos-22 size-29 cont-2">
+<div class="vis pos-9 size-29 colwrapper">
+<div class="vis pos-9 size-29 cont-19">
+<a class="button vis-3 pos-15 size-30 font-13" href="pictures.html"></a>
 </div>
-<div class="anim fadeIn js-4 vis pos-21 size-30 cont-20">
+<div class="anim fadeIn js-5 vis pos-23 size-31 cont-20">
 <p class="para-4"><span class="font-4">4 movies</span><span class="font-5">&nbsp;</span></p>
 <p class="para-8"><span class="font-6">fnck, ppp</span></p>
 </div>
@@ -109,74 +117,71 @@
 </div>
 </div>
 </div>
-<div class="vis pos-22 size-31 cont-2">
-<div class="vis pos-7 size-32 colwrapper">
-<div class="vis pos-7 size-33 cont-21">
-<div class="anim fadeIn js-5 vis pos-23 size-34 cont-22">
+<div class="vis pos-24 size-32 cont-2">
+<div class="vis pos-9 size-33 colwrapper">
+<div class="vis pos-9 size-34 cont-21">
+<div class="anim fadeIn js-6 vis pos-25 size-35 cont-22">
 <p class="para-6"><span class="font-8">7 outfits</span><span class="font-9">&nbsp;</span></p>
 <p class="para-7"><span class="font-10">jz4zmz, rspct</span></p>
 </div>
 </div>
-<div class="vis pos-24 size-33 cont-23">
-<a class="button vis-3 pos-13 size-35 font-14" href="pictures.html"></a>
+<div class="vis pos-26 size-34 cont-23">
+<a class="button vis-3 pos-15 size-36 font-14" href="pictures.html"></a>
 </div>
 </div>
-<div class="vis pos-25 size-36 colwrapper">
-<div class="vis pos-7 size-37 cont-24">
-<div class="anim fadeIn js-6 vis pos-26 size-38 cont-25">
+<div class="vis pos-27 size-37 colwrapper">
+<div class="vis pos-9 size-38 cont-24">
+<div class="anim fadeIn js-7 vis pos-28 size-39 cont-25">
 <p class="para-4"><span class="font-4">3 expositions</span><span class="font-5">&nbsp;</span></p>
 <p class="para-5"><span class="font-6">louve, berliani</span></p>
 </div>
 </div>
-<div class="vis pos-27 size-39 cont-26">
-<a class="button vis-3 pos-13 size-40 font-14" href="pictures.html"></a>
+<div class="vis pos-29 size-40 cont-26">
+<a class="button vis-3 pos-15 size-41 font-14" href="pictures.html"></a>
 </div>
 </div>
 </div>
-<div class="vis pos-28 size-41 cont-27">
+<div class="vis pos-30 size-42 cont-27">
 <p class="para-9"><span class="font-15">contact</span><span class="font-16">&nbsp;</span></p>
 <p class="para-10"><span class="font-17">&nbsp;</span></p>
 <p class="para-11"><span class="font-18">writetotrtn@gmail.com</span></p>
 </div>
-<div class="vis pos-29 size-42 cont-2">
-<div class="vis pos-7 size-43 colwrapper">
-<div class="vis pos-7 size-44 cont-28">
+<div class="vis pos-31 size-43 cont-2">
+<div class="vis pos-9 size-44 colwrapper">
+<div class="vis pos-9 size-45 cont-27">
 <input autocapitalize="off" placeholder="send BTC" class="input" value="3GmQQyhJj8XGKAChxNMKmdfD2gsTgLyHBx" type="text" autocorrect="off" name="send_BTC">
 </div>
-<div class="vis pos-30 size-45 cont-29">
-<a target="_blank" href="download/send-btc.pdf" class="button-2 vis-3 pos-13 size-46 font-19">Donate BTC</a>
+<div class="vis pos-32 size-46 cont-28">
+<a target="_blank" href="download/send-btc.pdf" class="button-2 vis-3 pos-15 size-47 font-19">Donate BTC</a>
 </div>
 </div>
-<form class="vis pos-31 size-47" action="thank-you.php" method="POST">
-<div class="vis pos-7 size-48 cont-2">
+<form class="vis pos-33 size-48" action="thank-you.php" method="POST">
+<div class="vis pos-9 size-49 cont-2">
 <input autocapitalize="off" placeholder="send love" class="input-2" value="<3" type="text" autocorrect="off" name="message[]">
 </div>
-<div class="vis pos-30 size-49 cont-2">
-<input type="text" name="qgdvdt" class="vis-4">
-<input type="text" name="uxbqsvpgyr" class="vis-4">
-<input class="js-7 vis-5 pos-13 size-50 submit" value="Send love" type="submit" name="sendmailform" disabled>
+<div class="vis pos-32 size-50 cont-2">
+<input type="text" name="aovqnd" class="vis-4">
+<input type="text" name="flakbj" class="vis-4">
+<input class="js-8 vis-5 pos-15 size-51 submit" value="Send love" type="submit" name="sendmailform" disabled>
 </div>
 </form>
-<form class="vis pos-32 size-51" action="thank-you.php" method="POST">
-<div class="vis pos-7 size-52 cont-2">
+<form class="vis pos-34 size-52" action="thank-you.php" method="POST">
+<div class="vis pos-9 size-53 cont-2">
 <input autocapitalize="off" placeholder="call me maybe for updates" class="input-3" type="text" required autocorrect="off" name="e-mail[]">
 </div>
-<div class="vis pos-33 size-53 cont-2">
-<input type="text" name="qgdvdt" class="vis-4">
-<input type="text" name="uxbqsvpgyr" class="vis-4">
-<input class="js-8 vis-5 pos-13 size-54 submit" value="Share e-mail" type="submit" name="sendmailform" disabled>
+<div class="vis pos-35 size-54 cont-2">
+<input type="text" name="fvydcdjdym" class="vis-4">
+<input type="text" name="ujsdaxlufrp" class="vis-4">
+<input class="js-9 vis-5 pos-15 size-55 submit" value="Share e-mail" type="submit" name="sendmailform" disabled>
 </div>
 </form>
 </div>
 </div>
-</div>
-<a name="anchor1" class="vis pos-34 size-55">
-</a>
-<script type="text/javascript" src="js/fixed.min.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/woolite.js"></script>
 <script type="text/javascript" src="js/h5validate.js"></script>
-<script type="text/javascript" src="js/index.20170929122529.js"></script>
+<script type="text/javascript" src="js/unveil.js"></script>
+<script type="text/javascript" src="js/index.20171005122249.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
