--- a/music.html
+++ b/music.html
@@ -22,104 +22,124 @@
 <meta name="viewport" content="width=960">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli%7CMontserrat:300,400&amp;subset=all">
 <title>Music</title>
-<link rel="stylesheet" type="text/css" href="css/site.20170929122529.css">
+<link rel="stylesheet" type="text/css" href="css/site.20171005122249.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20170929122529-lteIE7.css">
+<link rel="stylesheet" type="text/css" href="css/site.20171005122249-lteIE7.css">
 <![endif]-->
 </head>
-<body id="body-2">
-<div class="fbk vis pos size-56 cont fixed-2" data-fbk="fixed-2">
-<div class="pos-35 vis-2 section">
-<div class="vis pos-7 size-57 cont-4">
-<p class="para-12"><span class="font-20"><a href="index.html#anchor1">Go b</a></span><span class="font-20"><a href="index.html#anchor1">ack to main stage.</a></span></p>
+<body id="body">
+<div class="fbk vis pos size-56 cont-29 fixed" data-fbk="fixed">
+<div class="pos-36 vis-2 section-3">
+<div class="vis pos-9 size-57 cont-4">
+<p class="para-12"><span class="font-20"><a href="index.html#anchor1">&larr;</a></span></p>
 </div>
-<div class="vis pos-36 size-58 cont-2">
-<div class="vis pos-7 size-59 cont-30">
+</div>
+</div>
+<div class="pos-37 vis-2 section-4">
+<div class="vis pos-9 size-58 cont-27">
+<div class="vis pos-9 size-58 cont-30">
+<div class="vis pos-9 size-59 cont-27">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/b6YOjhO4LNY?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
-<div class="vis pos-37 size-60 cont-31">
+<div class="vis pos-38 size-60 cont-27">
 <p class="para-13"><span class="font-21">Eagles &amp; Butterflies - &Oacute;yeme</span></p>
 </div>
 </div>
-<div class="vis pos-38 size-58 cont-2">
-<div class="vis pos-39 size-61 cont-32">
+</div>
+<div class="vis pos-39 size-58 cont-27">
+<div class="vis pos-9 size-58 cont-30">
+<div class="vis pos-40 size-61 cont-27">
 <p class="para-14"><span class="font-22">Sahal&eacute; - Nlreb Mra Alrrih</span></p>
 </div>
-<div class="vis pos-40 size-59 cont-33">
+<div class="vis pos-41 size-59 cont-27">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9H3lCYKNC8o?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 </div>
-<div class="vis pos-38 size-58 cont-2">
-<div class="vis pos-7 size-59 cont-17">
+</div>
+<div class="vis pos-39 size-58 cont-27">
+<div class="vis pos-9 size-58 cont-30">
+<div class="vis pos-9 size-59 cont-27">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FJtSvexr0oA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
-<div class="vis pos-41 size-62 cont-34">
+<div class="vis pos-42 size-62 cont-27">
 <p class="para-13"><span class="font-21">Kiasmos - Swept</span></p>
 </div>
 </div>
-<div class="vis pos-38 size-58 cont-2">
-<div class="vis pos-42 size-3 cont-35">
+</div>
+<div class="vis pos-39 size-58 cont-27">
+<div class="vis pos-9 size-58 cont-30">
+<div class="vis pos-43 size-3 cont-15">
 <p class="para-15"><span class="font-23">Bileo - Your Can Win</span></p>
 </div>
-<div class="vis pos-43 size-59 cont-36">
+<div class="vis pos-44 size-59 cont-31">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ZoAATtUmvUs?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 </div>
-<div class="vis pos-38 size-58 cont-2">
-<div class="vis pos-7 size-59 cont-15">
+</div>
+<div class="vis pos-39 size-58 cont-27">
+<div class="vis pos-9 size-58 cont-30">
+<div class="vis pos-9 size-59 cont-7">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/jymI3c5npjM?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
-<div class="vis pos-44 size-63 cont-16">
+<div class="vis pos-45 size-63 cont-6">
 <p class="para-13"><span class="font-21">Nina Kraviz - Turn On the Radio</span></p>
 </div>
 </div>
-<div class="vis pos-45 size-58 cont-2">
-<div class="vis pos-42 size-3 cont-10">
+</div>
+<div class="vis pos-46 size-58 cont-27">
+<div class="vis pos-9 size-58 cont-30">
+<div class="vis pos-43 size-3 cont-19">
 <p class="para-15"><span class="font-23">Lorn - Acid Rain</span></p>
 </div>
-<div class="vis pos-43 size-59 cont-7">
+<div class="vis pos-44 size-59 cont-10">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/nxg4C365LbQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 </div>
-<div class="vis pos-38 size-58 cont-2">
-<div class="vis pos-7 size-59 cont-6">
+</div>
+<div class="vis pos-39 size-58 cont-27">
+<div class="vis pos-9 size-58 cont-30">
+<div class="vis pos-9 size-59 cont-32">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/02HxNjgPyZI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
-<div class="vis pos-44 size-63 cont-20">
+<div class="vis pos-45 size-63 cont-12">
 <p class="para-13"><span class="font-21">Phoenix - Telefono</span></p>
 </div>
 </div>
-<div class="vis pos-38 size-58 cont-2">
-<div class="vis pos-42 size-3 cont-19">
+</div>
+<div class="vis pos-39 size-58 cont-27">
+<div class="vis pos-9 size-58 cont-30">
+<div class="vis pos-43 size-3 cont-25">
 <p class="para-15"><span class="font-23">Petar Dundov - Distant Shores</span></p>
 </div>
-<div class="vis pos-43 size-59 cont-9">
+<div class="vis pos-44 size-59 cont-13">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/07mtJ5D4IPU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 </div>
-<div class="vis pos-38 size-58 cont-2">
-<div class="vis pos-7 size-59 cont-12">
+</div>
+<div class="vis pos-39 size-58 cont-27">
+<div class="vis pos-9 size-58 cont-30">
+<div class="vis pos-9 size-59 cont-26">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/L3Mljrf2oRU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
-<div class="vis pos-44 size-63 cont-13">
+<div class="vis pos-45 size-63 cont-23">
 <p class="para-13"><span class="font-21">Gui Boratto - Beautiful Life</span></p>
 </div>
 </div>
@@ -127,7 +147,7 @@
 </div>
 <script type="text/javascript" src="js/fixed.min.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/music.20170929122529.js"></script>
+<script type="text/javascript" src="js/music.20171005122249.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
