--- a/pictures.html
+++ b/pictures.html
@@ -22,18 +22,18 @@
 <meta name="viewport" content="width=960">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli%7CMontserrat:300,400&amp;subset=all">
 <title>Pictures</title>
-<link rel="stylesheet" type="text/css" href="css/site.20170929122529.css">
+<link rel="stylesheet" type="text/css" href="css/site.20171005122249.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20170929122529-lteIE7.css">
+<link rel="stylesheet" type="text/css" href="css/site.20171005122249-lteIE7.css">
 <![endif]-->
 </head>
-<body id="body">
-<div class="vis pos size cont-37">
-<div class="pos-35 vis-2 section">
-<div class="vis pos-7 size-64 cont-4">
-<p class="para-12"><span class="font-20"><a href="index.html#anchor1">Go back to main stage.</a></span></p>
+<body id="body-2">
+<div class="vis pos size-64 cont-33">
+<div class="pos-36 vis-2 section-3">
+<div class="vis pos-9 size-57 cont-4">
+<p class="para-12"><span class="font-20"><a href="index.html#anchor1">&larr;</a></span></p>
 </div>
-<div class="js-10 vis pos-46 size-65 cont-30 gallery">
+<div class="js-11 vis pos-47 size-65 cont-34 gallery">
 <div class="slider slider-nav">
 <div><picture><source srcset="images/thumb-tobias-van-schneider-88137-86.jpg 1x, images/thumb-tobias-van-schneider-88137-172.jpg 2x"><img class="slide0" src="images/thumb-tobias-van-schneider-88137-86.jpg"></picture></div>
 <div><picture><source srcset="images/thumb-jordi-ganduxe-358819-86.jpg 1x, images/thumb-jordi-ganduxe-358819-172.jpg 2x"><img class="slide1" src="images/thumb-jordi-ganduxe-358819-86.jpg"></picture></div>
@@ -77,7 +77,7 @@
 </div>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/slick.js"></script>
-<script type="text/javascript" src="js/pictures.20170929122529.js"></script>
+<script type="text/javascript" src="js/pictures.20171005122249.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
